styles/components/artifact.scss
@import "compass";

@import "../arrows";
@import "../breakpoints";
@import "../spacing";

.artifact-container {
    position: relative;
}

.previous-artifact {
    @include prev-arrow();
    background-image: url(/img/black-left-arrow.png);
}

.next-artifact {
    @include next-arrow();
    background-image: url(/img/black-right-arrow.png);
}

.previous-artifact,
.next-artifact {
    display: inline-block;
    height: 56px;
    width: 32px;

    @include respond-to('phone-down') {
        top: 100px;
    }
}

img {
    max-width: 100%;
}

.artifact-image-caption {
    font-size: 75%;
}

.artifact {
    @include display-flex;
    @include flex-direction(column);
    background-image: url(/img/artifact-sheet.png);
    background-repeat: no-repeat;
    background-size: contain;
    height: 609px;
    max-height: 609px;
    max-width: 871px;
    margin: 0 auto;
    padding: 20px;

    h2 {
        color: white;
        font-family: "affogato-regular";
        font-weight: normal;

        @include respond-to('phone-down') {
            color: black;
        }
    }

    &-header {
        @include flex(0 auto);
        border-bottom: 1px solid black;
        position: relative;
    }

    &-header-themes {
        bottom: 0;
        right: 0;
        position: absolute;
    }

    &-header-theme {
        display: inline-block;
        margin-left: 5px;

        &:first-of-type {
            margin: 0;
        }
    }

    &-body {
        @include display-flex;
        @include flex-direction(row);
        overflow: hidden;
    }

    &-left {
        @include display-flex;
        @include flex-direction(column);
        padding: 10px;
        width: 55%;
    }

    &-image-container {
        @include display-flex;
        @include flex-direction(column);
        height: 66%;
        max-height: 66%;
    }

    &-image {
        @include flex(1 1 auto);
        background-position: center center;
        background-repeat: no-repeat;
        background-size: contain;
        margin-bottom: 5px;
        max-height: 100%;
    }

    &-right {
        @include display-flex;
        @include flex-direction(column);
        padding: 10px;
        width: 45%;
    }

    &-text {
        max-height: 100%;
        overflow: auto;

        & p:first-of-type {
            margin-top: 0;
        }
    }

    &-label {
        font-family: Linowrite;
        padding-right: 5px;
        text-transform: uppercase;
    }

    &-details, &-themes {
        margin-top: 5px;
    }

    &-more {
        margin-top: 15px;
    }
}

@include respond-to('tablet-down') {
    .artifact {
        background-size: cover;
    }

    .previous-artifact {
        left: -20px;
    }

    .next-artifact {
        right: -20px;
    }
}

@include respond-to('phone-down') {
    .artifact {
        background-image: none;
        height: auto;
        max-height: none;

        &-body {
            @include flex-direction(column);
        }

        &-left {
            width: 100%;
        }

        &-right {
            width: 100%;
        }

        &-image {
            height: 200px;
        }

        &-text {
            max-height: none;
            overflow: inherit;
        }
    }
}

body.archive-section.artifact-page {
    background-image: url('/img/backgrounds/paper.jpg');
    background-position: top center;
}

